<resources>
    <string name="app_name">CodeLink</string>
    <string name="network_error">No Internet connection</string>
    <string name="un_authorized">UnAuthorized</string>
    <string name="unkown_error">Something went wrong. Please try again</string>
    <string name="can_t_use_camera_without_permission">Can\'t use camera without permission</string>
    <string name="choose_image">Choose Image</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="LetsStart">Let’s Start</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Log In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="forget_password">Forget password?</string>
    <string name="if_you_didn_t_receive_any_code_resend">If you didn’t receive any code,</string>
    <string name="submit_code">Submit code</string>
    <string name="enter_your_code_here">Enter your code here</string>
    <string name="new_password">New password</string>
    <string name="send">Send</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="invalid_otp">Invalid Otp</string>
    <string name="email_section_text">Please enter your email address to receive a verification code</string>
    <string name="password_section_text">Your new password must be different from previously used password</string>
    <string name="password_reset_successfully">Password changed</string>
    <string name="resend_code">Code was sent to your email</string>
    <string name="my_contacts">My contacts</string>
    <string name="share_with_friends">Share profile</string>
    <string name="course_mates">Course mates</string>
    <string name="info">About us</string>
    <string name="review">Review</string>
    <string name="logout">Log out</string>
    <string name="edit_profile">Edit profile</string>
    <string name="my_teams">My Teams</string>
    <string name="search">Search</string>
    <string name="choose_what_you_want">Choose what you want!</string>
    <string name="settings">Settings</string>
    <string name="interfacee">Interface</string>
    <string name="language_region"><![CDATA[Language & region]]></string>
    <string name="support">Support</string>
    <string name="dark_mode">Dark mode</string>
    <string name="notifications">Notifications</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="my_courses">My courses</string>
    <string name="logout_from_dialog">Log out </string>
    <string name="do_you_want_to_log_out">are you sure you want to log out?</string>
    <string name="language">Language</string>
    <string name="Arabic">Arabic</string>
    <string name="English">English</string>
    <string name="on_boarding_1">Our platform helps those interested in the field of Software to find what matches their interests..</string>
    <string name="on_boarding_2">You can also create or join teams for group projects..</string>
    <string name="on_boarding_3">Make the learning process more easier and enjoyable..</string>
    <string name="resend"> Resend</string>
    <string name="welcome_to_our_community">Welcome to our community!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="governate">Governate</string>
    <string name="university">University</string>
    <string name="faculty">Faculty</string>
    <string name="track">Track</string>
    <string name="my_projects">My Projects</string>
    <string name="skills">Skills</string>
    <string name="bio">Bio</string>
    <string name="save">Save</string>
    <string name="post_privacy">Post privacy</string>
    <string name="publish">publish</string>
    <string name="cancel">Cancel</string>
    <string name="block">Block</string>
    <string name="hide">Hide</string>
    <string name="what_s_on_your_mind">What’s on your mind?</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="post">Post</string>
    <string name="add_comment">add comment</string>
    <string name="choose_your_technical_circle">Choose your technical track!</string>
    <string name="find_users">Find Users</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="social">Social contacts</string>
    <string name="view_all">View all</string>
    <string name="posts">Posts</string>
    <string name="join">Join</string>
    <string name="shared">Post was Shared</string>
    <string name="name_of_team">Team name</string>
    <string name="name_of_project">Project description</string>
    <string name="description_of_the_project">Team description</string>
    <string name="create">Create</string>
    <string name="team_name">Team Name</string>
    <string name="team_members_names">Team Members</string>
    <string name="inbox">Inbox</string>
    <string name="friends">Friends</string>
    <string name="call">Call</string>
    <string name="contact_us">Contact Us</string>
    <string name="delete_account">Delete account</string>
    <string name="about">About</string>
    <string name="invite">Invite</string>
    <string name="individuals">Individuals</string>
    <string name="mentor">Mentor</string>
    <string name="teams">Teams</string>
    <string name="courses">Resources</string>
    <string name="communities">Communities</string>
    <string name="hackathons">Hackathons</string>
    <string name="mentors">Mentors</string>
    <string name="choose_your_community">Choose your technical community!</string>
    <string name="empty">Empty</string>
    <string name="birth_date">Birth date</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone number</string>
    <string name="my_projectss">My projects</string>
    <string name="programming_languages">Programming languages</string>
    <string name="cv_link">CV link</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="linkedin">LinkedIn</string>
    <string name="github">GitHub</string>
    <string name="behance">Behance</string>
    <string name="completeAll">Complete all fields</string>
    <string name="delete">Delete</string>
    <string name="delete_post">Delete post</string>
    <string name="sure_to_delete_post">Are you sure you want to delete this post?</string>
    <string name="edit">Edit</string>
    <string name="leave">Leave</string>
    <string name="invited">User was invited</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="team_invitaion_message">"You were invited to join"</string>
    <string name="user_invitaion_message">has requested to join your team</string>
    <string name="sure_delete_account">Are you sure you want to delete account ?</string>
    <string name="failed_to_delete">Failed to delete</string>
    <string name="delete_team">Delete team</string>
    <string name="sure_delete_team">Are you sure you want to delete this team ?</string>
    <string name="account_deleted">Account was deleted</string>
    <string name="request_sent">Join request was sent to the leader</string>
    <string name="left">you are no longer in this team</string>
    <string name="leave_team">Leave Team</string>
    <string name="sure_leave_team">Are you sure you want to leave ?</string>
</resources>