<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/color_background">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="80dp"
            android:src="@drawable/ic_login_image" />



    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_back"
        android:textSize="18sp"
        android:textColor="@color/color_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_field"
        style="@style/roundInputTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/color_hint"
        app:hintTextColor="@color/color_hint"
        app:layout_constraintTop_toBottomOf="@id/name_field"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/color_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/white"
            android:hint="@string/email"
            android:maxLines="1"
            android:inputType="text"
            android:textColor="@color/color_text"
            android:textColorHint="#757575"
            android:textCursorDrawable="@drawable/color_cursor"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field"
        style="@style/roundInputTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/color_hint"
        app:hintTextColor="@color/color_hint"
        app:endIconMode="password_toggle"
        app:endIconCheckable="true"
        app:endIconTint="@color/color_hint"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/color_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/color_text"
            android:textColorHint="#757575"
            android:textCursorDrawable="@drawable/color_cursor"

          />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_forget_password"
        android:text="@string/forget_password"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        android:textColor="@color/color_text"
        />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <com.kusu.loadingbutton.LoadingButton
        android:id="@+id/btn_login"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/app_button_ripple"
        android:padding="8dp"
        android:textColor="@color/color_text"
        android:textSize="@dimen/big_txt"
        android:textAllCaps="false"
        android:text="@string/login"
        app:lb_cornerRadius="16dp"
        app:lb_buttonColor="@color/color_primary"
        app:lb_isShadowEnable="false"
        app:lb_loaderColor="@color/white"
        />

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:id="@+id/ll_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingVertical="4dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:textSize="14sp"
            android:textColor="@color/color_text"
            android:text="@string/don_t_have_an_account"
            />

        <TextView
            android:id="@+id/tv_signup"
            android:paddingVertical="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/signup"
            android:textColor="@color/color_text"
            android:textSize="16sp"
            />
    </LinearLayout>
</LinearLayout>