<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_dialog_fragment"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_cancel"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:adjustViewBounds="true"
        android:background="@drawable/onboarding_button_ripple"
        android:src="@drawable/ic_x"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-30dp"
        android:gravity="center"
        android:text="@string/comments"
        android:textColor="@color/color_text"
        android:textSize="18sp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_comments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:clipToPadding="false"
        android:paddingVertical="20dp"
        android:layout_marginBottom="-10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/card_comment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-2dp"
        android:background="@drawable/app_dialog_fragment"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_emoji"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="true"
            android:background="@color/color_secondary_background"
            android:elevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/profile_wrapper"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:strokeColor="@color/color_dark_stroke"
            app:strokeWidth="0.5dp"
            app:tint="@color/color_text"
            android:layout_marginStart="16dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:src= "@drawable/ic_emoji" />

        <EditText
            android:id="@+id/et_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_comment"
            android:textSize="12sp"
            android:textColor="@color/color_text"
            android:textColorHint="@color/color_hint"
            android:maxLines="5"
            android:layout_marginVertical="1dp"
            android:background="@color/color_background"
            />

        <TextView
            android:id="@+id/tv_post"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_gravity="top"
            android:text="@string/post"
            android:textColor="@color/color_text"
            android:textSize="14sp"
            android:paddingHorizontal="20dp"
            />

    </LinearLayout>
</LinearLayout>